DataBase_Working_Vers1
Classe Database Funcionando, porém com alguns problemas. Só é possível chamar dois registros por linha

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Projeto Integrador</string>
+    <string name="url">https://script.google.com/macros/s/AKfycbxA3bVqOZAh1oczt6HY3PO_UqEGsJhoZwcQyxgqIn9nIu6USoRAbEsMcswpUV_r2w4/exec</string>
 </resources>
